--- a/Hopsparser.ipynb
+++ b/Hopsparser.ipynb
@@ -239,12 +239,12 @@
       "metadata": {
         "id": "-gMX9I07_Zj1"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -285,8 +285,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Essayer ce modèle plutôt : https://zenodo.org/record/7703346/files/UD_French-GSD-nobert-all.tar.xz?download=1"
+      ],
+      "metadata": {
+        "id": "AIRXYCXuPcRl"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "r6H93Yxwz6Jt"
       },
@@ -297,7 +306,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -327,7 +336,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -352,7 +361,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -397,7 +406,7 @@
         "id": "YVTgUoJBBEpe",
         "outputId": "c4fe3288-ec77-4e24-e810-1d93a2d14077"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
