--- a/Hopsparser.ipynb
+++ b/Hopsparser.ipynb
@@ -2,6 +2,37 @@
   "cells": [
     {
       "cell_type": "code",
+      "source": [
+        "import kagglehub\n",
+        "path = kagglehub.dataset_download(\"gwendaltsang/ud-french-gsd-2-9-camembert\")"
+      ],
+      "metadata": {
+        "id": "tMxIl-P0zUND",
+        "outputId": "39f5275e-5d7a-4fca-a24d-c3a8e09dbfb6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading from https://www.kaggle.com/api/v1/datasets/download/gwendaltsang/ud-french-gsd-2-9-camembert?dataset_version_number=1...\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            " 14%|█▍        | 104M/729M [00:00<00:05, 119MB/s] "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "colab": {
@@ -212,15 +243,13 @@
         }
       ],
       "source": [
-        "# Installation\n",
+        "# Installations\n",
         "\n",
-        "# Remove conflicting packages completely\n",
         "!pip uninstall -y torch torchvision torchaudio numpy transformers hopsparser tokenizers 2>/dev/null || true\n",
         "\n",
-        "# Install PyTorch 2.5.1 (compatible with NumPy 2.x) with CUDA 12.1\n",
         "!pip install torch==2.5.1 torchvision==0.20.1 torchaudio==2.5.1 --index-url https://download.pytorch.org/whl/cu121\n",
         "\n",
-        "# Install compatible transformers (hopsparser needs >=4.19)\n",
+        "# hopsparser needs >=4.19\n",
         "!pip install 'transformers>=4.41.0,<4.52.0'\n",
         "\n",
         "# Install hopsparser (will pull numpy>=2.1)\n",
@@ -282,26 +311,6 @@
         "\n",
         "import hopsparser\n",
         "print(\"Hopsparser: ✓ OK\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Essayer ce modèle plutôt : https://zenodo.org/record/7703346/files/UD_French-GSD-nobert-all.tar.xz?download=1"
-      ],
-      "metadata": {
-        "id": "AIRXYCXuPcRl"
-      }
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "r6H93Yxwz6Jt"
-      },
-      "outputs": [],
-      "source": [
-        "!wget https://zenodo.org/record/7703346/files/UD_French-GSD-flaubert.tar.xz"
       ]
     },
     {
