--- a/Hopsparser.ipynb
+++ b/Hopsparser.ipynb
@@ -7,13 +7,13 @@
         "path = kagglehub.dataset_download(\"gwendaltsang/ud-french-gsd-2-9-camembert\")"
       ],
       "metadata": {
-        "id": "tMxIl-P0zUND",
-        "outputId": "39f5275e-5d7a-4fca-a24d-c3a8e09dbfb6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tMxIl-P0zUND",
+        "outputId": "39f5275e-5d7a-4fca-a24d-c3a8e09dbfb6"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -26,7 +26,50 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            " 14%|█▍        | 104M/729M [00:00<00:05, 119MB/s] "
+            "100%|██████████| 729M/729M [00:07<00:00, 102MB/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Extracting files...\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import shutil\n",
+        "\n",
+        "dest = \"/content/ud-french-gsd-camembert\"\n",
+        "shutil.move(path, dest)\n",
+        "\n",
+        "print(\"Déplacé vers :\", dest)"
+      ],
+      "metadata": {
+        "id": "F4TvblUr0QzK",
+        "outputId": "43a97f39-6683-4f28-9e1d-543032ae2093",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/root/.cache/kagglehub/datasets/gwendaltsang/ud-french-gsd-2-9-camembert/versions/1\n",
+            "Déplacé vers : /content/ud-french-gsd-camembert\n"
           ]
         }
       ]
